crates/netproto/src/snapshots/naiad_netproto__bucket__tests__caps_min_query_bits_absent.snap
---
source: crates/netproto/src/bucket.rs
assertion_line: 1528
expression: caps
---
{
  "version": 8,
  "mode": "bucketed",
  "prefix_bits": 8,
  "relation_incremental": true,
  "mapping_incremental": true,
  "reports": false,
  "hash_domain": "blake3",
  "hash_domains": [
    "blake3",
    "sha256"
  ],
  "incremental_domains": [
    "blake3",
    "sha256"
  ],
  "server_version": "0.2.73",
  "streaming": true
}
