crates/netproto/src/snapshots/naiad_netproto__bucket__tests__caps_with_serve_hint.snap
---
source: crates/netproto/src/bucket.rs
expression: caps
---
{
  "version": 8,
  "mode": "bucketed",
  "prefix_bits": 8,
  "relation_incremental": true,
  "mapping_incremental": true,
  "reports": false,
  "hash_domain": "blake3",
  "hash_domains": [
    "blake3",
    "sha256"
  ],
  "incremental_domains": [
    "blake3",
    "sha256"
  ],
  "server_version": "0.2.69",
  "serve_hint": {
    "blake3": {
      "ms_per_bucket": 0.4
    },
    "sha256": {
      "ms_per_bucket": 56.5,
      "hint_bits": 32
    }
  }
}
